made adding points not be interfered with by other elements, fixed scale value wrapping when loading from file

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, html {
     overflow: hidden;
 }
 #container {
-    background: #FFF;
+    background: #f2f2f2;
     position: fixed;
     width: 100vw;
     height: 100vh;
